--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3005
 DB_CNN = mongodb+srv://mean_user:RPAWIjlXHqgPwOog@cluster0.zf2f0.mongodb.net/hospitaldb
+JWT_SECRET_KEY=Holasdj2839khJ@asdyui3897K
