--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 3005
 DB_CNN = mongodb+srv://mean_user:RPAWIjlXHqgPwOog@cluster0.zf2f0.mongodb.net/hospitaldb
 JWT_SECRET_KEY=Holasdj2839khJ@asdyui3897K
+
+GOOGLE_ID=119757870108-jon0m4pe3c2tc8e2npfapajcajn9g5uh.apps.googleusercontent.com
+GOOGLE_SECRET=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
